--- a/jowfsclient/pom.xml
+++ b/jowfsclient/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.owfs</groupId>
   <artifactId>jowfsclient</artifactId>
-  <version>1.1.1-SNAPSHOT</version>
+  <version>1.1.1</version>
   <name>Jowfsclient</name>
   
   <dependencies>
