--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.sonatype.oss</groupId>
@@ -9,7 +8,7 @@
 	<groupId>org.owfs</groupId>
 	<artifactId>jowfsclient</artifactId>
 	<name>jowfsclient</name>
-	<version>1.2.0-SNAPSHOT</version>
+	<version>1.2.0</version>
 	<description>Java connector to owfs providing both network and file adapters. Provided with alarming monitor</description>
 	<url>https://github.com/tomasz-kucharski/jowfsclient</url>
 	<licenses>
